--- a/.github/workflows/liara.yaml
+++ b/.github/workflows/liara.yaml
@@ -17,5 +17,5 @@ jobs:
           LIARA_TOKEN: ${{ secrets.LIARA_API_TOKEN3 }}
         run: |
           npm i -g @liara/cli@5
-          liara deploy --app="flask-applications" --api-token="$LIARA_TOKEN" --no-app-logs --port=5000 --host=0.0.0.0
+          liara deploy --app="flask-applications" --api-token="$LIARA_TOKEN" --no-app-logs --port=5000 
 
