--- a/.github/workflows/liara.yaml
+++ b/.github/workflows/liara.yaml
@@ -17,5 +17,5 @@ jobs:
           LIARA_TOKEN: ${{ secrets.LIARA_API_TOKEN }}
         run: |
           npm i -g @liara/cli@5
-          liara deploy --app="flask-app" --api-token="$LIARA_TOKEN" --no-app-logs  --worker 2
+          liara deploy --app="flask-app" --api-token="$LIARA_TOKEN" --no-app-logs
 
