--- a/.github/workflows/liara.yaml
+++ b/.github/workflows/liara.yaml
@@ -11,11 +11,11 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: "18"
+          node-version: "20"
       - name: update-liara
         env:
           LIARA_TOKEN: ${{ secrets.LIARA_API_TOKEN }}
         run: |
           npm i -g @liara/cli@5
-          liara deploy --app="flask-app" --api-token="$LIARA_TOKEN" --no-app-logs
+          liara deploy --app="flask-app" --api-token="$LIARA_TOKEN" --no-app-logs --port="5000"
 
