--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask
-opencv-python
+Quart
+opencv-python-headless
 deepface
 sqlmodel
 bcrypt
@@ -7,3 +7,4 @@ ultralytics
 pydantic
 tf-keras
 psycopg2-binary
+python-dotenv
